syntax = "proto2";

package loom.pb.run;

option optimize_for = LITE_RUNTIME;

message Run {
	repeated string args = 1;
	repeated string map_inputs = 2;
	repeated string map_outputs = 3;
}
